fix: correctly truncate subname in decklist

--- a/src/components/list-card/list-card.module.css
+++ b/src/components/list-card/list-card.module.css
@@ -133,7 +133,7 @@
 
 .meta {
   display: flex;
-  flex-flow: row wrap;
+  flex-flow: row nowrap;
   align-items: center;
   line-height: 1.25;
   font-size: var(--text-sm);
@@ -233,7 +233,7 @@
   padding-inline: 0;
 
   & .meta {
-    flex-wrap: wrap;
+    flex-flow: row wrap;
   }
 }
 
